feat(users): store users
